# hum470-space-heating

./: .gitignore  PRESENTATION_CHANGES.md  README.md  eda_summary.typ  email_reply_abdurahman.txt  meeting_notes_2026-03-25.txt  pyproject.toml  references.bib  report.typ  template.typ
data/: bfe_hdd_monthly.csv  bfs_census_buildings_heating.json  bfs_population.json  gwr_heating_by_canton.csv  gwr_heating_by_type.csv  zurich_hdd_annual.csv
data/raw/: README.md  bau_wohnungswesen.csv  bfs_pop_projections.csv  buildings_heating_source_2000_2021.xlsx  ch_combined_topo.json  floor_area_by_building_category.xlsx  floor_area_by_rooms_canton.csv  worldbank_gdp_ch.json  worldbank_pop_ch.json
docs/: plan-2026-03-12-v2.md  plan-2026-03-12-v3.md  plan-2026-03-12.md  research-technology.md  supervisor-notes-2026-03-26.md
figures/: fig_methodology_flowchart.typ
notebooks/: analysis.py  gen_methodology_fig.py
notebooks/lib/: __init__.py  chart_style.py  data_sources.py  economics.py  lmdi.py  monte_carlo.py
