[project]
name = "hum"
version = "0.1.0"
description = "IPAT decomposition analysis of energy demand for space heating in Swiss residential buildings (EPFL HUM-470)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "marimo>=0.20.4",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "plotly[express,kaleido]>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "xlrd>=2.0.2",
]
